[package]
name = "quizer"
version = "1.0.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Kiwifuit/Quizzer-lib"
license-file = "LICENSE"
description = "A simple  library for storing quiz data in a binary file format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.152", features = [ "serde_derive" ] }
