[package]
name = "quizzer"
version = "1.0.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Kiwifuit/Quizzer-lib"
license =  "GPL-3.0"
description = "A simple  library for storing quiz data in a binary file format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cfg-if = "1.0.0"
serde = { version = "1.0.152", features = [ "serde_derive" ] }
serde_json = "1.0.92"
