[package]
name = "quizzer"
version = "1.1.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Kiwifuit/Quizzer-lib"
license =  "GPL-3.0"
documentation = "https://docs.rs/quizzer/latest/quizzer"
description = "A simple  library for storing quiz data in a binary file format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = {version = "1.3.3", optional = true}
cfg-if = "1.0.0"
serde = { version = "1.0.152", features = [ "serde_derive" ] }
serde_json = {version = "1.0.92", optional = true}

[features]
default = ["dep:bincode"]
json = ["dep:serde_json"]